Refactor StringUtil: use streams, ternary operators, switch expressions, and fix head/tail negative size handling